Oven cam feed working! Uses node raspicam to capture pictures and express server for client app

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,3 @@
 <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<p><button id="cameraControl">Start camera</button></p>
+<p><img id="camera" src="/images/still.jpg" alt=""></p>
