--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,3 @@
 <h1>{{title}}</h1>
 <p><button id="cameraControl">Start camera</button></p>
-<p><img id="camera" src="/images/still.jpg" alt=""></p>
+<p><img id="camera" src="/images/loading.jpg" alt=""></p>
